--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -1,53 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Submit Campaign</title>
-  <script defer src="/submit-campaign.js"></script>
-</head>
-<body>
-  <h1>Submit Your Track for Repost</h1>
-  <form id="campaignForm">
-    <label>
-      Track Title:<br>
-      <input type="text" id="trackTitle" required />
-    </label>
-    <br><br>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Submit Your Campaign</title>
+    <link rel="stylesheet" href="/styles.css" />
+    <script src="/firebase-auth.js" defer></script>
+    <script src="/submit-campaign.js" defer></script>
+  </head>
+  <body>
+    <header>
+      <h1>🎧 Submit Your Track for Repost</h1>
+    </header>
 
-    <label>
-      SoundCloud URL:<br>
-      <input type="url" id="trackUrl" required />
-    </label>
-    <br><br>
+    <main>
+      <section class="form-container">
+        <p>Welcome to TrackRepost! Submit your SoundCloud track to start your repost campaign. We'll automatically detect your genre and ensure it matches your metadata to keep the platform fair for everyone. ✅</p>
 
-    <label>
-      Genre:<br>
-      <select id="genre" required>
-        <option value="hiphop">Hip Hop</option>
-        <option value="edm">EDM</option>
-        <option value="pop">Pop</option>
-        <option value="rock">Rock</option>
-        <option value="other">Other</option>
-      </select>
-    </label>
-    <br><br>
+        <form id="campaignForm">
+          <label for="trackUrl">SoundCloud Track URL:</label>
+          <input type="url" id="trackUrl" name="trackUrl" required placeholder="https://soundcloud.com/artist/track" />
 
-    <label>
-      Total Credits to Spend:<br>
-      <input type="number" id="totalCredits" min="1" required />
-    </label>
-    <br><br>
+          <label for="credits">Credits to Spend:</label>
+          <input type="number" id="credits" name="credits" required min="1" />
 
-    <label>
-      Credits Per Repost:<br>
-      <input type="number" id="creditsPerRepost" min="1" required />
-    </label>
-    <br><br>
+          <label for="description">Short Description:</label>
+          <textarea id="description" name="description" rows="3"></textarea>
 
-    <button type="submit">Submit Campaign</button>
-  </form>
+          <button type="submit">🚀 Submit Campaign</button>
+        </form>
 
-  <p id="status"></p>
-</body>
+        <div id="message"></div>
+      </section>
+    </main>
+
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: #111;
+        color: #eee;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 2rem;
+      }
+
+      header h1 {
+        font-size: 1.8rem;
+        margin-bottom: 1rem;
+        color: #ff7a00;
+      }
+
+      .form-container {
+        background: #222;
+        padding: 2rem;
+        border-radius: 1rem;
+        width: 100%;
+        max-width: 500px;
+        box-shadow: 0 0 10px rgba(255, 122, 0, 0.2);
+      }
+
+      label {
+        display: block;
+        margin-top: 1rem;
+        font-weight: bold;
+      }
+
+      input,
+      textarea {
+        width: 100%;
+        padding: 0.5rem;
+        margin-top: 0.25rem;
+        border: 1px solid #444;
+        border-radius: 5px;
+        background: #333;
+        color: #fff;
+      }
+
+      button {
+        margin-top: 1.5rem;
+        background-color: #ff7a00;
+        color: white;
+        border: none;
+        padding: 0.75rem 1.5rem;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 1rem;
+        width: 100%;
+      }
+
+      button:hover {
+        background-color: #ff9500;
+      }
+
+      #message {
+        margin-top: 1rem;
+        font-size: 0.95rem;
+      }
+    </style>
+  </body>
 </html>
