--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -1,103 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Submit Your Campaign</title>
-    <link rel="stylesheet" href="/styles.css" />
-    <script src="/firebase-auth.js" defer></script>
-    <script src="/submit-campaign.js" defer></script>
-  </head>
-  <body>
-    <header>
-      <h1>🎧 Submit Your Track for Repost</h1>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Submit Your Track | TrackRepost</title>
+  <link rel="stylesheet" href="/styles/style.css" />
+  <script type="module" src="/js/submit-campaign.js" defer></script>
+</head>
+<body>
+  <header>
+    <h1>🎵 Submit Your Track</h1>
+    <p>Welcome to TrackRepost. Submit your SoundCloud track below to start a repost campaign!</p>
+  </header>
 
-    <main>
-      <section class="form-container">
-        <p>Welcome to TrackRepost! Submit your SoundCloud track to start your repost campaign. We'll automatically detect your genre and ensure it matches your metadata to keep the platform fair for everyone. ✅</p>
+  <main>
+    <form id="campaign-form">
+      <label for="soundcloud-url">SoundCloud Track URL</label>
+      <input type="url" id="soundcloud-url" name="soundcloudUrl" required placeholder="https://soundcloud.com/your-track" />
 
-        <form id="campaignForm">
-          <label for="trackUrl">SoundCloud Track URL:</label>
-          <input type="url" id="trackUrl" name="trackUrl" required placeholder="https://soundcloud.com/artist/track" />
+      <label for="credits">Credits to Spend</label>
+      <input type="number" id="credits" name="credits" required min="10" placeholder="Minimum 10 credits" />
 
-          <label for="credits">Credits to Spend:</label>
-          <input type="number" id="credits" name="credits" required min="1" />
+      <label for="genre">Select Genre</label>
+      <select id="genre" name="genre" required>
+        <option value="">Select a genre...</option>
+        <option value="Alternative Rock">Alternative Rock</option>
+        <option value="Ambient">Ambient</option>
+        <option value="Classical">Classical</option>
+        <option value="Country">Country</option>
+        <option value="Dance & EDM">Dance & EDM</option>
+        <option value="Dancehall">Dancehall</option>
+        <option value="Deep House">Deep House</option>
+        <option value="Disco">Disco</option>
+        <option value="Drum & Bass">Drum & Bass</option>
+        <option value="Dubstep">Dubstep</option>
+        <option value="Electronic">Electronic</option>
+        <option value="Folk & Singer-Songwriter">Folk & Singer-Songwriter</option>
+        <option value="Hip-hop & Rap">Hip-hop & Rap</option>
+        <option value="House">House</option>
+        <option value="Indie">Indie</option>
+        <option value="Jazz & Blues">Jazz & Blues</option>
+        <option value="Latin">Latin</option>
+        <option value="Metal">Metal</option>
+        <option value="Piano">Piano</option>
+        <option value="Pop">Pop</option>
+        <option value="R&B & Soul">R&B & Soul</option>
+        <option value="Reggae">Reggae</option>
+        <option value="Reggaeton">Reggaeton</option>
+        <option value="Rock">Rock</option>
+        <option value="Soundtrack">Soundtrack</option>
+        <option value="Techno">Techno</option>
+        <option value="Trance">Trance</option>
+        <option value="Trap">Trap</option>
+        <option value="Triphop">Triphop</option>
+        <option value="World">World</option>
+      </select>
 
-          <label for="description">Short Description:</label>
-          <textarea id="description" name="description" rows="3"></textarea>
+      <button type="submit">🚀 Launch Campaign</button>
+    </form>
 
-          <button type="submit">🚀 Submit Campaign</button>
-        </form>
-
-        <div id="message"></div>
-      </section>
-    </main>
-
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background: #111;
-        color: #eee;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 0;
-        padding: 2rem;
-      }
-
-      header h1 {
-        font-size: 1.8rem;
-        margin-bottom: 1rem;
-        color: #ff7a00;
-      }
-
-      .form-container {
-        background: #222;
-        padding: 2rem;
-        border-radius: 1rem;
-        width: 100%;
-        max-width: 500px;
-        box-shadow: 0 0 10px rgba(255, 122, 0, 0.2);
-      }
-
-      label {
-        display: block;
-        margin-top: 1rem;
-        font-weight: bold;
-      }
-
-      input,
-      textarea {
-        width: 100%;
-        padding: 0.5rem;
-        margin-top: 0.25rem;
-        border: 1px solid #444;
-        border-radius: 5px;
-        background: #333;
-        color: #fff;
-      }
-
-      button {
-        margin-top: 1.5rem;
-        background-color: #ff7a00;
-        color: white;
-        border: none;
-        padding: 0.75rem 1.5rem;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 1rem;
-        width: 100%;
-      }
-
-      button:hover {
-        background-color: #ff9500;
-      }
-
-      #message {
-        margin-top: 1rem;
-        font-size: 0.95rem;
-      }
-    </style>
-  </body>
+    <div id="confirmation-message" style="display: none;"></div>
+  </main>
+</body>
 </html>
