--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,15 @@
+
+<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="1.5; url=/submit-campaign.html" />
-    <title>TrackRepost - Redirecting</title>
-    <style>
-      body {
-        background-color: #0f172a;
-        color: #fff;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-      }
-      h1 {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-      }
-      .loader {
-        border: 5px solid #334155;
-        border-top: 5px solid #22d3ee;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        animation: spin 1s linear infinite;
-      }
-      @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-      }
-      a {
-        color: #22d3ee;
-        margin-top: 1rem;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Launching TrackRepost...</h1>
-    <div class="loader"></div>
-    <a href="/submit-campaign.html">Click here if you're not redirected</a>
-
-    <script>
-      setTimeout(() => {
-        window.location.href = "/submit-campaign.html";
-      }, 1500);
-    </script>
-  </body>
+<head>
+  <meta http-equiv="refresh" content="0; url=submit-campaign.html">
+  <meta charset="UTF-8" />
+  <title>Redirecting...</title>
+</head>
+<body>
+  <p>Redirecting to submit-campaign...</p>
+</body>
 </html>
 
 
