--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -33,6 +33,7 @@
   </footer>
 
   <!-- Firebase SDKs -->
-  <script type="module" src="js/dashboard.js"></script>
+  <script src="js/dashboard.js" type="module" defer></script>
+
 </body>
 </html>
