--- a/public/submit-campaign.html
+++ b/public/submit-campaign.html
@@ -33,7 +33,8 @@
     </section>
   </main>
 
-  <script type="module" src="/js/submit-campaign.js"></script>
+  <script src="js/submit-campaign.js" type="module" defer></script>
+
 </body>
 </html>
 
